2009-12-23 Jens Eipel  <j.eipel@connecta.ag>

	* initial code generated with kickstarter