@@ -3,7 +3,7 @@
 /***************************************************************
  * Extension Manager/Repository config file for ext "cag_importcsv".
  *
- * Auto generated 13-12-2014 13:47
+ * Auto generated 13-12-2014 13:50
  *
  * Manual updates:
  * Only the data in the array - everything else is removed by next
@@ -12,9 +12,9 @@
 
 $EM_CONF[$_EXTKEY] = array (
 	'title' => 'CSV Import Module',
-	'description' => 'CSV Import Tool. Can import multiple CSV-Files and comes with an easy Script Language for mapping your CSV-data to Database Fields',
+	'description' => 'CSV-File Import Tool (Import Excel Files). Can import a whole Directory of CSV-Files. Comes with an optional easy Script-Language for mapping CSV-data to Database Fields. Allows you to manipulate data during import',
 	'category' => 'module',
-	'version' => '0.5.2',
+	'version' => '0.5.5',
 	'state' => 'stable',
 	'uploadfolder' => 0,
 	'createDirs' => '',
